@@ -5,6 +5,8 @@ Changes for Crate-Java-Testing
 Unreleased
 ==========
 
+ * add ``fromSysProperties`` static factory method to CrateTestCluster.
+
 2016/02/08 0.3.0
 ================
 
